--- a/src/vnf-test.html
+++ b/src/vnf-test.html
@@ -11,5 +11,11 @@
 <div id="qunit-fixture"></div>
 <script src="lib/qunit-1.23.1.js"></script>
 <script data-main="vnf-test.js" src="../lib/require.js"></script>
+
+<script type="text/javascript">
+    QUnit.config.testTimeout = 2000;
+</script>
+
+
 </body>
 </html>
