--- a/src/vnf-test.html
+++ b/src/vnf-test.html
@@ -15,10 +15,10 @@
 <script type="text/javascript">
     Timeouts = {}
 
-    QUnit.config.testTimeout = 10000;
+    QUnit.config.testTimeout = 20000;
 
-    Timeouts.logCaptureTimeout = QUnit.config.testTimeout/2;
-    
+    Timeouts.logCaptureTimeout = QUnit.config.testTimeout || 20000;
+
     Timeouts.iceSendTimeout = Math.min(Timeouts.logCaptureTimeout/10, 1000);
 </script>
 
