--- a/src/vnf-test.html
+++ b/src/vnf-test.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>QUnit Example</title>
-    <link rel="stylesheet" href="css/qunit-1.23.1.css">
+    <link rel="stylesheet" href="css/qunit-2.1.1.css">
 </head>
 <body>
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
-<script src="lib/qunit-1.23.1.js"></script>
-<script data-main="vnf-test.js" src="../lib/require.js"></script>
+<script src="lib/qunit-2.1.1.js"></script>
+<script data-main="vnf-test.js" src="lib/require.js"></script>
 
 <script type="text/javascript">
     Timeouts = {}
 
-    QUnit.config.testTimeout = 60000;
+    QUnit.config.testTimeout = 1000;
 
     Timeouts.logCaptureTimeout = QUnit.config.testTimeout || 60000;
 
