--- a/src/vnf-test.html
+++ b/src/vnf-test.html
@@ -14,10 +14,49 @@
 
 <script type="text/javascript">
     Timeouts = {}
+    TestingProfiles = {}
 
-    QUnit.config.testTimeout = 20000;
+    TestingProfiles = {
+        qunitTestTimeout: 20000,
+        logCaptureTimeout: 20000,
 
-    Timeouts.logCaptureTimeout = QUnit.config.testTimeout || 60000;
+        reliableFastHeartbeatInterval: 10,
+        reliableFastConnectionInvalidateInterval: 100,
+        reliableFastConnectionLostTimeout: 300,
+        reliableFastKeepAliveHandshakingChannelTimeout: 200,
+
+        "root:InMemory": {
+            rate: 1
+        },
+
+        "root:RTC": {
+            rate: 3,
+
+            reliableFastHeartbeatInterval: 1000,
+            reliableFastConnectionInvalidateInterval: 10000,
+            reliableFastConnectionLostTimeout: 30000,
+            reliableFastKeepAliveHandshakingChannelTimeout: 2000,
+        },
+
+        toAbsoluteInterval: function(profile, timePoints) {
+            if(!timePoints) return;
+
+            var rate = TestingProfiles[profile].rate;
+            return rate * timePoints;
+        },
+
+        getInterval: function(profile, config) {
+            var profileConfigurations = TestingProfiles[profile];
+
+            var defaultInterval = TestingProfiles.toAbsoluteInterval(profile, TestingProfiles[config]);
+
+            return profileConfigurations[config] || defaultInterval;
+        }
+    }
+
+    QUnit.config.testTimeout = TestingProfiles.qunitTestTimeout;
+    Timeouts.logCaptureTimeout = TestingProfiles.logCaptureTimeout;
+
 
     Timeouts.iceSendTimeout = Math.min(Timeouts.logCaptureTimeout/10, 1000);
 </script>
