--- a/src/vnf-test.html
+++ b/src/vnf-test.html
@@ -16,61 +16,82 @@
     Timeouts = {}
     TestingProfiles = {}
 
-    var TESTING_LEVEL_SMOKE = 0;
-    var TESTING_LEVEL_RELEASE = 1;
-    var TESTING_LEVEL_DEBUG = 2;
+    var TESTING_LEVEL_RELEASE = 0;
+    var TESTING_LEVEL_INTEGRATION = 1;
+    var TESTING_LEVEL_3RD_PARTY_UNRELIABLE = 2;
     var TESTING_LEVEL_STRESS = 3;
 
     TestingProfiles = {
         rate: 1,
-        testLevel: TESTING_LEVEL_SMOKE,
+        testLevel: TESTING_LEVEL_RELEASE,
 
         relative__qunitTestTimeout: 3000,
         relative__logCaptureTimeout: 3000,
 
-        relative__reliableFastHeartbeatInterval: 20,
-        relative__reliableFastConnectionInvalidateInterval: 200,
-        relative__reliableFastConnectionLostTimeout: 600,
-        relative__reliableFastHandshakeRetryInterval: 60,
-        relative__reliableFastKeepAliveHandshakingChannelTimeout: 240,
+        relative__reliableFastHeartbeatInterval: 50,
+        relative__reliableFastConnectionInvalidateInterval: 500,
+        relative__reliableFastConnectionLostTimeout: 1500,
+        relative__reliableFastHandshakeRetryInterval: 150,
+        relative__reliableFastKeepAliveHandshakingChannelTimeout: 600,
 
-        reliableRtcHeartbeatInterval: 1,
-        reliableRtcConnectionInvalidateInterval: 10,
-        reliableRtcConnectionLostTimeout: 100,
-        reliableRtcHandshakeRetryInterval: 10,
-        reliableRtcKeepAliveHandshakingChannelTimeout: 100,
+        reliableRtcHeartbeatInterval: 50,
+        reliableRtcConnectionInvalidateInterval: 500,
+        reliableRtcConnectionLostTimeout: 5000,
+        reliableRtcHandshakeRetryInterval: 500,
+        reliableRtcKeepAliveHandshakingChannelTimeout: 20000,
 
-        //activeTestingLevel: TESTING_LEVEL_SMOKE,
-        activeTestingLevel: TESTING_LEVEL_RELEASE,
-        //activeTestingLevel: TESTING_LEVEL_DEBUG,
+        //activeTestingLevel: TESTING_LEVEL_RELEASE,
+        activeTestingLevel: TESTING_LEVEL_INTEGRATION,
+        //activeTestingLevel: TESTING_LEVEL_3RD_PARTY_UNRELIABLE,
         //activeTestingLevel: TESTING_LEVEL_STRESS,
 
         "root:InMemory": {
             rate: 2,
-            testLevel: TESTING_LEVEL_SMOKE
+            testLevel: TESTING_LEVEL_RELEASE
+        },
+
+        "root:Reliable": {
+            rate: 10,
         },
 
         "root:Rtc": {
-            rate: 50,
-            testLevel: TESTING_LEVEL_DEBUG
+            rate: 5,
+
+            testLevel: TESTING_LEVEL_3RD_PARTY_UNRELIABLE
         },
 
         "root:ReliableRtc": {
-            rate: 100,
+            rate: 10,
 
-            testLevel: TESTING_LEVEL_RELEASE,
+            testLevel: TESTING_LEVEL_INTEGRATION,
 
             qunitTestTimeout:  30000,
             logCaptureTimeout: 30000
         },
 
         "[root:ReliableRtc]-[Reliable Hub v0.2] Connection Lost: by timeout" : {
-            qunitTestTimeout:  60000,
-            logCaptureTimeout: 60000
+            rate: 1,
+            
+            qunitTestTimeout:  30000,
+            logCaptureTimeout: 30000
         },
 
         "[root:ReliableRtc]-[Reliable Hub v0.2] Connection Lost: by timeout v2" : {
-            rate: 20,
+            rate: 1
+        },
+
+        "ReliableHub Connection Lost: [root:Rtc]-[Reliable Hub v0.2] Connection Lost: by timeout" : {
+            rate: 10
+        },
+
+        "[root:ReliableRtc]-[Vnf System Tests]-[Unit] Service call failed: failed due to connection lost test" : {
+            qunitTestTimeout:  35000,
+            logCaptureTimeout: 35000
+        },
+
+        "[root:ReliableRtc]-[Vnf System Tests]-[Unit] Service call failed: failed due to connection lost test" : {
+            qunitTestTimeout:  40000,
+            logCaptureTimeout: 40000
         },
 
         getValue: function(profileKey, config) {
