Minor test adjustment

--- a/src/vnf-test.html
+++ b/src/vnf-test.html
@@ -94,6 +94,10 @@
             logCaptureTimeout: 40000
         },
 
+        "[root:ReliableRtc]-[Reliable Hub v0.2] ReliableHub Handshake Retry test" : {
+            rate: 20
+        },
+
         getValue: function(profileKey, config) {
 
             if(profileKey == null) {
