Increase timeout for frequently failing test

--- a/src/vnf-test.html
+++ b/src/vnf-test.html
@@ -98,6 +98,10 @@
             rate: 20
         },
 
+        "[root:ReliableRtc]-[UnreliableHub] Generic Vnf Tests: Channel Verify Synchronous Destroy-Invalidate Call" : {
+            rate: 30
+        },
+
         getValue: function(profileKey, config) {
 
             if(profileKey == null) {
