RTC test timeout fix

--- a/src/vnf-test.html
+++ b/src/vnf-test.html
@@ -61,6 +61,11 @@
             testLevel: TESTING_LEVEL_3RD_PARTY_UNRELIABLE
         },
 
+        "[Channel Integration Tests, Rtc] Connection close - recipient destroy" : {
+            qunitTestTimeout:  10000,
+            logCaptureTimeout: 10000
+        },
+
         "root:ReliableRtc": {
             rate: 10,
 
