Migrate to ES6 modules

--- a/src/vnf-test.html
+++ b/src/vnf-test.html
@@ -10,10 +10,12 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 <script src="lib/qunit-2.9.2.js"></script>
-<script data-main="vnf-tests.js" src="lib/require.js"></script>
+<!--<script src="lib/bluebird.js"></script>-->
+<!--<script data-main="vnf-tests.js" src="lib/require.js"></script>-->
+<script type="module" src="karma-tests.js"></script>
 
 <script type="text/javascript">
-  QUnit.config.autostart = false;
+  ///QUnit.config.autostart = false;
 </script>
 
 </body>
